Readme file modified

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "nahid/number-to-words",
+    "name": "nahid940/number-to-words",
     "description": "Convert numbers into words",
     "type": "library",
     "license": "MIT",
