--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "minimum-stability": "stable",
 	"autoload": {
-        "psr-4": {"nahid940\\NumberToWords\\": "src/"}
+        "psr-4": {"nahid940\\": "src/"}
     },
     "require": {}
 }
